--- a/src/contents/contents.css
+++ b/src/contents/contents.css
@@ -1,1 +1,53 @@
-/* your solution here */
+body{
+    margin: 0 auto;
+    font-family: 'DM Sans';
+}
+.contents17{
+    background-image: url(Image.svg);
+    background-size: 1400px;
+    background-repeat:no-repeat;
+    background-position: center;
+    background-color: rgb(145 189 198);
+    box-shadow: inset 0 0 0 480px rgba(47, 24, 147, 0.8);
+    height: 480px;
+    align-content: center;
+    }
+    .container2{
+        width: 1400px;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    .comp{
+        display: flex;
+        flex-direction: column;
+        margin-left: 215px;
+        width: 466px;
+        letter-spacing: 0.16px;
+    }
+    #maincomp{
+        color: white;
+        font-size: 20px;
+    }
+    #comptext{
+        color: white;
+        font-size: 18px;
+        margin-top: 20px;
+        line-height: 28px;
+        opacity: 0.7;
+    }
+    .textcard{
+        width: 238px;
+        height: 192px;
+        background-color: white;
+        border-radius: 20px;
+        margin-left: 64px;
+        align-self: center;
+        font-size: 22px;
+        line-height: 32px;
+        color: rgba(72, 43, 231, 1);
+        font-weight: 700;
+        text-align: center;
+        padding: 44px 38px 44px 46px;
+        letter-spacing: 0.2px;
+    }
