--- a/src/features/features.css
+++ b/src/features/features.css
@@ -1,1 +1,79 @@
-/* your solution here */
+body{
+    margin: 0 auto;
+    font-family: 'DM Sans';
+}
+.feat3{
+    margin: 0 auto;
+    max-width: 1170px;
+    height: 750px;
+}
+.title{
+    width: 750px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    letter-spacing: 0.2px;
+    margin: 0 auto;
+}
+#main{
+    font-weight:700;
+    margin-top: 100px;
+    letter-spacing: 0.4px;
+    font-size: 42px;
+    color: #1E0E62;
+}
+#descr1{
+    line-height: 32px;
+    margin-top: 25px;
+    font-size: 22px;
+    font-weight: 500;
+    color: rgba(21, 20, 57, 0.4);
+}
+.cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 64px;
+    column-gap: 28px;
+}
+#card1, #card2, #card3{
+    width: 368px;
+    height: 340px;
+    border: 2px solid rgba(235, 234, 237, 1) ;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#newimg1, #newimg2, #newimg3{
+    margin-top: 60px;  
+}
+#newimg1{
+    width: 40px;
+    height: 38px;
+}
+#newimg2{
+    height: 38px;
+    width: 43px;
+}
+#newimg3{
+    height: 38px;
+    top: 4px;
+}
+.new{
+    font-size: 22px;
+    color: #1E0E62;
+    font-weight: 700;
+    margin-top: 24.8px;
+    word-spacing: 1px;
+}
+.newtxt{
+    width: 276px;
+    font-size: 16px;
+    line-height: 26px; 
+    margin-top: 22.4px;
+    text-align: center;
+    color: rgba(21, 20, 57, 0.4);
+}
+#newtxt3{
+    width: 266px;
+}
