--- a/src/forms/style.css
+++ b/src/forms/style.css
@@ -1,1 +1,109 @@
-/* Your solution here */
+.forms3{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 658px;
+    font-family: DM Sans;
+    max-width: 85.57%;
+    margin: 0 auto;
+}
+#img1{
+   display: flex;
+   justify-self: flex-end;
+   align-self: center;
+   margin-right: 146px;
+   padding-bottom: 14px;
+}
+.account{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    padding-left: 15px;
+    padding-bottom: 16px;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+}
+#descr{
+    font-size: 16px;
+    color:rgba(21, 20, 57, 0.4);
+    margin-top: 16px;
+    line-height: 26px;
+    letter-spacing: -0.07px;
+}
+#maintxt{
+    color: #1E0E62;
+    font-weight: 900;
+    font-size: 42px;
+    line-height: 52px;
+    letter-spacing: 0.5px;
+}
+.form{
+    margin-top: 36px;
+}
+#field1, #field2, #field3{
+    height: 56px;
+    border-radius: 100px;
+    font-size: 20px;
+    line-height: 26px;
+    border: 2px solid #EBEAED;  
+    color: #1E0E62;
+    padding-left: 20px;
+}
+::placeholder{
+    color: #EBEAED;
+    padding-left: 24px;
+    font-family: DM Sans;
+}
+#field1{
+    width: 466px;
+}
+#field2{
+    width: 216px;
+}
+#field3{
+    width: 226px;
+    margin-left: 16px;
+}
+#em, #pass{
+    color: #1E0E62;
+    font-weight: 900;
+    letter-spacing: 2px;
+    font-size: 14px;
+    line-height: 26px;
+    margin: 0px auto 10px auto;
+    letter-spacing: 2.3px;
+    font-weight: 900;
+}
+#pass{
+    margin-top: 32px;
+}
+#sub{
+    color: white;
+    width: 120px;
+    height: 60px;
+    border: none;
+    border-radius: 100px;
+    background-color: #25DAC5;
+    font-size: 20px;
+    line-height: 26px;
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+#buttonor{
+    display: flex;
+    align-items: baseline;
+}
+#or{
+    word-spacing: 22.5px;
+    margin-left: 24px;
+    font-size: 14px;
+    line-height: 26px;
+    color: #EBEAED;
+}
+i{
+    color: #EBEAED;
+    font-size: 22px;
+}
